# REDACTED

./: .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE  README.md  main.py  output.ts  pyproject.toml
.github/: dependabot.yml  funding.yml
.github/workflows/: dlib-demo.yml  python-build-msi.yml
src/: _logging.py  cam_name.py  camera.py  consts.py  desktop.ini  lib_install.py  main.py  post_install.py  swap.py
