[tool.poetry]
name = "redacted-video"
packages = [{ include = "src" }]
version = "v0.0.0"
description = "Automated Video Redaction"
readme = "README.md"
license = "MIT"
authors = [
  "Andrew Slayton <andrewsla1726@gmail.com>",
  "Martin Miglio <code@martinmiglio.dev>",
]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
opencv-python = "^4.10.0.84"
pyvirtualcam = "^0.11.1"
requests = "^2.32.3"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^24.3.0"
vulture = "^2.11"
isort = "^5.13.0"
prospector = "^1.10.3"


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''


[tool.isort]
profile = "black"


[tool.pylint.main]
ignore = ["build", "debug"]
py-version = "3.11"
suggestion-mode = true
disable = [
  "C0114", # missing-module-docstring
  "C0115", # missing-class-docstring
  "C0116", # missing-function-docstring
  "C0301", # line-too-long
  "C0103", # invalid-name
]
